Updated page Package Metadata/pl

--- a/wiki/pl/Package_Metadata.html
+++ b/wiki/pl/Package_Metadata.html
@@ -9,11 +9,8 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span class="mw-headline" id="Wprowadzenie">Wprowadzenie</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Pocz&#261;wszy od wersji 0.20 programu FreeCAD, zewn&#281;trzne dodatki (&#347;rodowiska pracy, makra, pakiety preferencji, paczki <sup><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></sup> i og&oacute;lne "inne" zbiory narz&#281;dzi <sup><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></sup>) mog&#261; by&#263; dystrybuowane z plikiem metadanych opisuj&#261;cym zawarto&#347;&#263; pakietu. Je&#380;eli plik "package.xml" jest obecny, jest on odczytywany przez FreeCAD i jego zawarto&#347;&#263; jest wykorzystywana w r&oacute;&#380;nych cz&#281;&#347;ciach interfejsu u&#380;ytkownika. Obecnie jest on opcjonalny dla &#347;rodowisk pracy i makrodefinicji, a wymagany dla pakiet&oacute;w preferencji. Ta strona dokumentuje format tego pliku metadanych. Format <i>(i zawarto&#347;&#263; tej strony Wiki)</i> s&#261; oparte na <a rel="nofollow" class="external text" href="https://ros.org/reps/rep-0149.html">REP 149</a>.
-</p>
-</div>
-<p><span id="Overall_file_format"></span>
+<p>Pocz&#261;wszy od FreeCAD v0.20, dodatki powinny by&#263; dystrybuowane z plikiem manifest opisuj&#261;cym ich zawarto&#347;&#263;. FreeCAD u&#380;ywa tych metadanych m.in. do okre&#347;lenia jakie zasoby za&#322;adowa&#263; i jakie zale&#380;no&#347;ci zainstalowa&#263;. Ten plik zapewnia te&#380; informacje u&#380;ywane do wy&#347;wietlania dodatku w Mened&#380;erze dodatk&oacute;w.
+</p><p><span id="Overall_file_format"></span>
 </p>
 <h2><span id="Og.C3.B3lny_format_pliku"></span><span class="mw-headline" id="Og&oacute;lny_format_pliku">Og&oacute;lny format pliku</span></h2>
 <p>Ten dokument opisuje obecnie format pliku w wersji 1.
@@ -408,15 +405,15 @@ Aby okre&#347;li&#263;, &#380;e nie ma zastosowania &#380;adna licencja <i>(np. 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121155832
+Cached time: 20260121180604
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.068 seconds
-Real time usage: 0.092 seconds
-Preprocessor visited node count: 499/1000000
-Post&#8208;expand include size: 7972/2097152 bytes
-Template argument size: 2919/2097152 bytes
+CPU time usage: 0.073 seconds
+Real time usage: 0.348 seconds
+Preprocessor visited node count: 484/1000000
+Post&#8208;expand include size: 7872/2097152 bytes
+Template argument size: 2907/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -424,18 +421,17 @@ Unstrip post&#8208;expand size: 8520/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.008      1 -total
- 18.04%    4.693      1 Template:Powerdocnavi/pl
- 15.58%    4.052      3 Template:Version/pl
- 14.89%    3.872     37 Template:Incode
- 10.90%    2.835      2 Template:VersionNote
-  8.85%    2.303      1 Template:Code
-  8.33%    2.167      1 Template:MenuCommand
-  7.32%    1.905      1 Template:Navigation_menu_2
-  5.68%    1.476      1 Template:TOCright
+100.00%  267.598      1 -total
+  7.27%   19.463      1 Template:Powerdocnavi/pl
+  1.62%    4.339     37 Template:Incode
+  1.55%    4.154      3 Template:Version/pl
+  1.16%    3.093      1 Template:Navigation_menu_2
+  0.89%    2.390      1 Template:Code
+  0.81%    2.159      1 Template:MenuCommand
+  0.74%    1.993      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260121155832 and revision id 1741916. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260121180604 and revision id 1741985. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
