--- a/wiki/pl/Package_Metadata.html
+++ b/wiki/pl/Package_Metadata.html
@@ -14,14 +14,12 @@
 </p>
 <h2><span id="Og.C3.B3lny_format_pliku"></span><span class="mw-headline" id="Og&oacute;lny_format_pliku">Og&oacute;lny format pliku</span></h2>
 <p>Ten dokument opisuje obecnie format pliku w wersji 1.
-</p><p>The original format and contents of this page were based on <a rel="nofollow" class="external text" href="https://ros.org/reps/rep-0149.html">REP 149</a>.
+</p><p>Oryginalny format i zawarto&#347;&#263; tej strony oparto o <a rel="nofollow" class="external text" href="https://ros.org/reps/rep-0149.html">REP 149</a>.
 </p><p>Plik metadanych musi by&#263; prawid&#322;owym, dobrze uformowanym dokumentem XML 1.0. Musi on nosi&#263; nazw&#281; "package.xml" i musi istnie&#263; w katalogu bazowym ka&#380;dej wy&#347;wietlanej ga&#322;&#281;zi pakietu oprogramowania <i>(jak okre&#347;lono w pliku <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons/blob/master/AddonCatalog.json">FreeCAD-addons AddonCatalog.json</a>)</i> w jego repozytorium git. Oczekuje si&#281;, &#380;e ka&#380;da ga&#322;&#261;&#378; b&#281;dzie zawiera&#263; niezale&#380;ny plik package.xml odnosz&#261;cy si&#281; konkretnie do tej ga&#322;&#281;zi (np. ga&#322;&#261;&#378; "development" powinna okre&#347;la&#263; numer wersji, kt&oacute;ry jasno wskazuje, &#380;e jest to ga&#322;&#281;&#378; rozwojowa itd.). Wszystkie zrozumia&#322;e znaczniki XML s&#261; pisane ma&#322;ymi literami, ale nierozpoznane znaczniki nie stanowi&#261; b&#322;&#281;du. Wi&#281;kszo&#347;&#263; znacznik&oacute;w jest opcjonalna, a niekt&oacute;re maj&#261; zastosowanie tylko do niekt&oacute;rych typ&oacute;w zawarto&#347;ci pakiet&oacute;w <i>(na przyk&#322;ad, tylko &#347;rodowiska pracy zapewniaj&#261; obecnie element "classname")</i>. Niepotrzebne lub nierozpoznane elementy s&#261; ignorowane.
 </p><p>Ka&#380;da &#347;cie&#380;ka pliku okre&#347;lona w package.xml musi u&#380;ywa&#263; uko&#347;nika <i>("/")</i> jako separatora katalogu: w systemach, kt&oacute;re oczekuj&#261; innego separatora podczas wykonywania <i>(np. Windows)</i> FreeCAD automatycznie przekonwertuje go na prawid&#322;owy separator.
 </p><p><span id="Tags"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h2><span id="Elementy_zawarto.C5.9Bci"></span><span class="mw-headline" id="Elementy_zawarto&#347;ci">Elementy zawarto&#347;ci</span></h2>
-</div>
+<h2><span class="mw-headline" id="Znaczniki">Znaczniki</span></h2>
 <h3><span id=".3Cpackage.3E"></span><span class="mw-headline" id="&lt;package&gt;">&lt;package&gt;</span></h3>
 <div class="mw-translate-fuzzy">
 <p>Jedynym dozwolonym elementem najwy&#380;szego poziomu jest &lt;package&gt;, a plik mo&#380;e zawiera&#263; tylko jeden element &lt;package&gt;. Bezpo&#347;rednio pod nim znajduje si&#281; kilka wymaganych lub opcjonalnych element&oacute;w, zdefiniowanych tutaj. &#379;adne inne znaczniki nie s&#261; dozwolone bezpo&#347;rednio pod elementem &lt;package&gt;.
@@ -405,13 +403,13 @@ Aby okre&#347;li&#263;, &#380;e nie ma zastosowania &#380;adna licencja <i>(np. 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121180604
+Cached time: 20260121180635
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.073 seconds
-Real time usage: 0.348 seconds
-Preprocessor visited node count: 484/1000000
+CPU time usage: 0.072 seconds
+Real time usage: 0.121 seconds
+Preprocessor visited node count: 483/1000000
 Post&#8208;expand include size: 7872/2097152 bytes
 Template argument size: 2907/2097152 bytes
 Highest expansion depth: 4/100
@@ -421,17 +419,17 @@ Unstrip post&#8208;expand size: 8520/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  267.598      1 -total
-  7.27%   19.463      1 Template:Powerdocnavi/pl
-  1.62%    4.339     37 Template:Incode
-  1.55%    4.154      3 Template:Version/pl
-  1.16%    3.093      1 Template:Navigation_menu_2
-  0.89%    2.390      1 Template:Code
-  0.81%    2.159      1 Template:MenuCommand
-  0.74%    1.993      1 Template:TOCright
+100.00%   27.161      1 -total
+ 31.38%    8.523      1 Template:Powerdocnavi/pl
+ 12.88%    3.498     37 Template:Incode
+ 12.59%    3.419      3 Template:Version/pl
+ 10.79%    2.931      1 Template:Code
+  9.85%    2.676      1 Template:MenuCommand
+  8.79%    2.388      1 Template:Navigation_menu_2
+  6.02%    1.635      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260121180604 and revision id 1741985. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260121180635 and revision id 1741989. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
