--- a/wiki/pl/Package_Metadata.html
+++ b/wiki/pl/Package_Metadata.html
@@ -21,10 +21,8 @@
 </p>
 <h2><span class="mw-headline" id="Znaczniki">Znaczniki</span></h2>
 <h3><span id=".3Cpackage.3E"></span><span class="mw-headline" id="&lt;package&gt;">&lt;package&gt;</span></h3>
-<div class="mw-translate-fuzzy">
-<p>Jedynym dozwolonym elementem najwy&#380;szego poziomu jest &lt;package&gt;, a plik mo&#380;e zawiera&#263; tylko jeden element &lt;package&gt;. Bezpo&#347;rednio pod nim znajduje si&#281; kilka wymaganych lub opcjonalnych element&oacute;w, zdefiniowanych tutaj. &#379;adne inne znaczniki nie s&#261; dozwolone bezpo&#347;rednio pod elementem &lt;package&gt;.
+<p>Jedynym elementem g&oacute;rnego poziomu dozwolonym w pliku manifest jest znacznik &lt;package&gt; i mo&#380;e on by&#263; tylko jeden. Wszystkie pozosta&#322;e znaczniki razem z zawarto&#347;ci&#261; s&#261; osadzone w nim.
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-xml mw-content-ltr" dir="ltr"><pre><span></span><span class="nt">&lt;package</span><span class="w"> </span>
 <span class="w">    </span><span class="na">format=</span><span class="s">"1"</span>
 <span class="w">    </span><span class="na">xmlns=</span><span class="s">"https://wiki.freecad.org/Package_Metadata"</span>
@@ -403,13 +401,13 @@ Aby okre&#347;li&#263;, &#380;e nie ma zastosowania &#380;adna licencja <i>(np. 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121180635
+Cached time: 20260121180751
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.121 seconds
-Preprocessor visited node count: 483/1000000
+CPU time usage: 0.058 seconds
+Real time usage: 0.101 seconds
+Preprocessor visited node count: 482/1000000
 Post&#8208;expand include size: 7872/2097152 bytes
 Template argument size: 2907/2097152 bytes
 Highest expansion depth: 4/100
@@ -419,17 +417,17 @@ Unstrip post&#8208;expand size: 8520/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.161      1 -total
- 31.38%    8.523      1 Template:Powerdocnavi/pl
- 12.88%    3.498     37 Template:Incode
- 12.59%    3.419      3 Template:Version/pl
- 10.79%    2.931      1 Template:Code
-  9.85%    2.676      1 Template:MenuCommand
-  8.79%    2.388      1 Template:Navigation_menu_2
-  6.02%    1.635      1 Template:TOCright
+100.00%   32.287      1 -total
+ 19.34%    6.244      1 Template:Code
+ 19.32%    6.237      1 Template:Powerdocnavi/pl
+ 15.35%    4.955      3 Template:Version/pl
+ 12.93%    4.175     37 Template:Incode
+ 11.39%    3.679      1 Template:TOCright
+  8.65%    2.794      1 Template:MenuCommand
+  4.00%    1.290      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260121180635 and revision id 1741989. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260121180751 and revision id 1741991. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
