Updated page Package Metadata/pl

--- a/wiki/pl/Package_Metadata.html
+++ b/wiki/pl/Package_Metadata.html
@@ -35,9 +35,7 @@
 <li>xmlns="NAMESPACE": Okre&#347;la u&#380;ywan&#261; przestrze&#324; nazw XML. Musi by&#263; ustawione na "<a rel="nofollow" class="external free" href="https://wiki.freecad.org/Package_Metadata">https://wiki.freecad.org/Package_Metadata</a>".</li></ul>
 <p><span id="Required_Tags"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h4><span id="Wymagane_identyfikatory_podrz.C4.99dne"></span><span class="mw-headline" id="Wymagane_identyfikatory_podrz&#281;dne">Wymagane identyfikatory podrz&#281;dne</span></h4>
-</div>
+<h4><span class="mw-headline" id="Wymagane_znaczniki">Wymagane znaczniki</span></h4>
 <div class="mw-translate-fuzzy">
 <p>Element &lt;package&gt; najwy&#380;szego poziomu musi zawiera&#263; co najmniej nast&#281;puj&#261;ce znaczniki:
 </p>
@@ -399,13 +397,13 @@ Aby okre&#347;li&#263;, &#380;e nie ma zastosowania &#380;adna licencja <i>(np. 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121180839
+Cached time: 20260121180846
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.061 seconds
-Real time usage: 0.096 seconds
-Preprocessor visited node count: 481/1000000
+CPU time usage: 0.086 seconds
+Real time usage: 0.248 seconds
+Preprocessor visited node count: 480/1000000
 Post&#8208;expand include size: 7872/2097152 bytes
 Template argument size: 2907/2097152 bytes
 Highest expansion depth: 4/100
@@ -415,17 +413,17 @@ Unstrip post&#8208;expand size: 8520/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.602      1 -total
- 26.71%    7.640      1 Template:Powerdocnavi/pl
- 13.76%    3.936     37 Template:Incode
- 13.20%    3.775      1 Template:Code
- 13.12%    3.754      1 Template:MenuCommand
- 11.30%    3.231      1 Template:Navigation_menu_2
- 11.28%    3.227      1 Template:TOCright
- 10.63%    3.041      3 Template:Version/pl
+100.00%   95.268      1 -total
+ 28.11%   26.782      1 Template:Powerdocnavi/pl
+ 16.31%   15.538     37 Template:Incode
+ 12.90%   12.293      3 Template:Version/pl
+ 10.70%   10.194      1 Template:Navigation_menu_2
+ 10.13%    9.652      1 Template:Code
+  9.13%    8.700      1 Template:TOCright
+  6.46%    6.157      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260121180838 and revision id 1741993. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260121180845 and revision id 1741995. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
