--- a/wiki/pl/Package_Metadata.html
+++ b/wiki/pl/Package_Metadata.html
@@ -36,10 +36,8 @@
 <p><span id="Required_Tags"></span>
 </p>
 <h4><span class="mw-headline" id="Wymagane_znaczniki">Wymagane znaczniki</span></h4>
-<div class="mw-translate-fuzzy">
-<p>Element &lt;package&gt; najwy&#380;szego poziomu musi zawiera&#263; co najmniej nast&#281;puj&#261;ce znaczniki:
+<p>Nast&#281;puj&#261;ce znaczniki musz&#261; by&#263; obecne w elemencie &lt;package&gt;:
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <ul><li><a href="#.3Cname.3E">&lt;name&gt;</a></li>
 <li><a href="#.3Cversion.3E">&lt;version&gt;</a></li>
@@ -397,13 +395,13 @@ Aby okre&#347;li&#263;, &#380;e nie ma zastosowania &#380;adna licencja <i>(np. 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121180846
+Cached time: 20260121180914
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.248 seconds
-Preprocessor visited node count: 480/1000000
+CPU time usage: 0.075 seconds
+Real time usage: 0.205 seconds
+Preprocessor visited node count: 479/1000000
 Post&#8208;expand include size: 7872/2097152 bytes
 Template argument size: 2907/2097152 bytes
 Highest expansion depth: 4/100
@@ -413,17 +411,17 @@ Unstrip post&#8208;expand size: 8520/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   95.268      1 -total
- 28.11%   26.782      1 Template:Powerdocnavi/pl
- 16.31%   15.538     37 Template:Incode
- 12.90%   12.293      3 Template:Version/pl
- 10.70%   10.194      1 Template:Navigation_menu_2
- 10.13%    9.652      1 Template:Code
-  9.13%    8.700      1 Template:TOCright
-  6.46%    6.157      1 Template:MenuCommand
+100.00%   47.925      1 -total
+ 26.31%   12.611      1 Template:Powerdocnavi/pl
+ 20.35%    9.753      3 Template:Version/pl
+ 13.70%    6.565      1 Template:MenuCommand
+ 11.63%    5.573      1 Template:TOCright
+ 11.21%    5.372     37 Template:Incode
+  6.43%    3.082      1 Template:Code
+  5.75%    2.757      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260121180845 and revision id 1741995. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260121180914 and revision id 1741997. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
