--- a/wiki/pl/Package_Metadata.html
+++ b/wiki/pl/Package_Metadata.html
@@ -38,16 +38,14 @@
 <h4><span class="mw-headline" id="Wymagane_znaczniki">Wymagane znaczniki</span></h4>
 <p>Nast&#281;puj&#261;ce znaczniki musz&#261; by&#263; obecne w elemencie &lt;package&gt;:
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li><a href="#.3Cname.3E">&lt;name&gt;</a></li>
 <li><a href="#.3Cversion.3E">&lt;version&gt;</a></li>
 <li><a href="#.3Cdate.3E">&lt;date&gt;</a></li>
 <li><a href="#.3Cdescription.3E">&lt;description&gt;</a></li>
-<li><a href="#.3Cmaintainer.3E">&lt;maintainer&gt;</a> <i>(wiele, ale co najmniej jeden)</i></li>
-<li><a href="#.3Clicense.3E">&lt;license&gt;</a> <i>(wiele, ale co najmniej jeden)</i></li>
+<li><a href="#.3Cmaintainer.3E">&lt;maintainer&gt;</a></li>
+<li><a href="#.3Clicense.3E">&lt;license&gt;</a></li>
 <li><a href="#.3Cicon.3E">&lt;icon&gt;</a></li>
-<li><a href="#.3Ccontent.3E">&lt;content&gt;</a> <i>(element kontenera dla element&oacute;w zawarto&#347;ci pakietu)</i></li></ul>
-</div>
+<li><a href="#.3Ccontent.3E">&lt;content&gt;</a></li></ul>
 <p><span id="Optional_Tags"></span>
 </p>
 <div class="mw-translate-fuzzy">
@@ -395,13 +393,13 @@ Aby okre&#347;li&#263;, &#380;e nie ma zastosowania &#380;adna licencja <i>(np. 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121180914
+Cached time: 20260121181211
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.205 seconds
-Preprocessor visited node count: 479/1000000
+CPU time usage: 0.071 seconds
+Real time usage: 0.162 seconds
+Preprocessor visited node count: 478/1000000
 Post&#8208;expand include size: 7872/2097152 bytes
 Template argument size: 2907/2097152 bytes
 Highest expansion depth: 4/100
@@ -411,17 +409,17 @@ Unstrip post&#8208;expand size: 8520/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.925      1 -total
- 26.31%   12.611      1 Template:Powerdocnavi/pl
- 20.35%    9.753      3 Template:Version/pl
- 13.70%    6.565      1 Template:MenuCommand
- 11.63%    5.573      1 Template:TOCright
- 11.21%    5.372     37 Template:Incode
-  6.43%    3.082      1 Template:Code
-  5.75%    2.757      1 Template:Navigation_menu_2
+100.00%   33.982      1 -total
+ 40.71%   13.835      1 Template:TOCright
+ 22.93%    7.791      1 Template:Powerdocnavi/pl
+  8.57%    2.911      3 Template:Version/pl
+  6.97%    2.367     37 Template:Incode
+  6.14%    2.085      1 Template:MenuCommand
+  5.94%    2.018      1 Template:Code
+  5.04%    1.714      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260121180914 and revision id 1741997. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260121181211 and revision id 1741999. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
