--- a/wiki/pl/Package_Metadata.html
+++ b/wiki/pl/Package_Metadata.html
@@ -48,9 +48,7 @@
 <li><a href="#.3Ccontent.3E">&lt;content&gt;</a></li></ul>
 <p><span id="Optional_Tags"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h4><span id="Opcjonalne_identyfikatory_podrz.C4.99dne"></span><span class="mw-headline" id="Opcjonalne_identyfikatory_podrz&#281;dne">Opcjonalne identyfikatory podrz&#281;dne</span></h4>
-</div>
+<h4><span class="mw-headline" id="Opcjonalne_znaczniki">Opcjonalne znaczniki</span></h4>
 <div class="mw-translate-fuzzy">
 <ul><li><a href="#.3Curl.3E">&lt;url&gt;</a> <i>(wiele)</i></li>
 <li><a href="#.3Cauthor.3E">&lt;author&gt;</a> <i>(wiele)</i></li>
@@ -393,13 +391,13 @@ Aby okre&#347;li&#263;, &#380;e nie ma zastosowania &#380;adna licencja <i>(np. 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121181211
+Cached time: 20260121181223
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.162 seconds
-Preprocessor visited node count: 478/1000000
+CPU time usage: 0.076 seconds
+Real time usage: 0.158 seconds
+Preprocessor visited node count: 477/1000000
 Post&#8208;expand include size: 7872/2097152 bytes
 Template argument size: 2907/2097152 bytes
 Highest expansion depth: 4/100
@@ -409,17 +407,17 @@ Unstrip post&#8208;expand size: 8520/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.982      1 -total
- 40.71%   13.835      1 Template:TOCright
- 22.93%    7.791      1 Template:Powerdocnavi/pl
-  8.57%    2.911      3 Template:Version/pl
-  6.97%    2.367     37 Template:Incode
-  6.14%    2.085      1 Template:MenuCommand
-  5.94%    2.018      1 Template:Code
-  5.04%    1.714      1 Template:Navigation_menu_2
+100.00%   46.372      1 -total
+ 28.03%   12.998      3 Template:Version/pl
+ 19.65%    9.112      1 Template:Powerdocnavi/pl
+ 13.28%    6.157     37 Template:Incode
+ 11.10%    5.147      1 Template:TOCright
+  9.83%    4.557      1 Template:Code
+  7.36%    3.412      1 Template:MenuCommand
+  6.01%    2.785      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260121181211 and revision id 1741999. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260121181223 and revision id 1742001. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
