--- a/wiki/pl/Package_Metadata.html
+++ b/wiki/pl/Package_Metadata.html
@@ -89,22 +89,20 @@
 <p>CO NAJMNIEJ JEDEN WYMAGANY <i>(dopuszczalna jest wi&#281;ksza liczba)</i>
 </p><p>Skr&oacute;cony identyfikator SPDX licencji dla tego pakietu, np. BSD-2-Clause, PL-3.0 lub nowszy, LGPL-2.1 lub nowszy. W celu u&#322;atwienia odczytu maszynowego, nale&#380;y do&#322;&#261;czy&#263; tylko kr&oacute;tki identyfikator SPDX licencji <i>(patrz <a rel="nofollow" class="external text" href="https://spdx.org/licenses/">strona SPDX</a>)</i>. W przypadku wielu licencji nale&#380;y u&#380;y&#263; wielu oddzielnych znacznik&oacute;w. Pakiet b&#281;dzie mia&#322; wiele licencji, je&#347;li r&oacute;&#380;ne pliki &#378;r&oacute;d&#322;owe maj&#261; r&oacute;&#380;ne licencje. Ka&#380;da licencja wyst&#281;puj&#261;ca w plikach &#378;r&oacute;d&#322;owych powinna mie&#263; odpowiedni znacznik &lt;license&gt;. W przypadku tekstu obja&#347;niaj&#261;cego zastrze&#380;enia licencyjne nale&#380;y u&#380;y&#263; znacznika &lt;description&gt;.
 Aby okre&#347;li&#263;, &#380;e nie ma zastosowania &#380;adna licencja <i>(np. "Wszystkie prawa zastrze&#380;one.")</i>, nale&#380;y ustawi&#263; t&#281; warto&#347;&#263; na "UNLICENSED". Aby okre&#347;li&#263; niestandardow&#261; licencj&#281; bez identyfikatora SPDX, nale&#380;y ustawi&#263; t&#281; warto&#347;&#263; na "SEE LICENSE IN &lt;filename&gt;".
+</p><p>Powszechnie u&#380;ywane ci&#261;gi nazw licencji:
 </p>
-<div class="mw-translate-fuzzy">
-<p>Powszechnie u&#380;ywane ci&#261;gi nazw licencji:
-</p>
-<ul><li><code>"Apache-2.0"</code></li>
-<li><code>"BSD-2-Clause"</code></li>
-<li><code>"BSD-3-Clause"</code></li>
-<li><code>"BSL-1.0"</code></li>
-<li><code>"GPL-2.0-or-later"</code></li>
-<li><code>"GPL-3.0-or-later"</code></li>
-<li><code>"LGPL-2.1-or-later"</code></li>
-<li><code>"LGPL-3.0-or-later"</code></li>
-<li><code>"MIT"</code></li>
-<li><code>"MPL-1.1"</code></li>
-<li><code>"CC0-1.0"</code> <i>(Dedykacja domeny publicznej)</i></li></ul>
-</div>
+<ul><li><code>Apache-2.0</code></li>
+<li><code>BSD-2-Clause</code></li>
+<li><code>BSD-3-Clause</code></li>
+<li><code>BSL-1.0</code></li>
+<li><code>GPL-2.0-or-later</code></li>
+<li><code>GPL-3.0-or-later</code></li>
+<li><code>LGPL-2.1-or-later</code></li>
+<li><code>LGPL-3.0-or-later</code></li>
+<li><code>MIT</code></li>
+<li><code>MPL-1.1</code></li>
+<li><code>CC-BY-SA-4.0</code></li>
+<li><code>CC0-1.0</code></li></ul>
 <p><b>Uwaga dotycz&#261;ca kompatybilno&#347;ci wstecznej</b>: Mened&#380;er dodatk&oacute;w b&#281;dzie pr&oacute;bowa&#322; znormalizowa&#263; identyfikatory licencji, kt&oacute;re nie s&#261; dok&#322;adnie zgodne z ci&#261;giem licencyjnym SPDX. Czasami b&#281;dzie to skutkowa&#263; identyfikatorem licencji, kt&oacute;ry daje licencj&#281; inn&#261; ni&#380; FSF-Libre lub niezatwierdzon&#261; przez OSI: na przyk&#322;ad "LGPL2" zostanie znormalizowana do "LGPL-2.0", kt&oacute;ra jest licencj&#261; inn&#261; ni&#380; FSF-Libre: prawdopodobnie chodzi&#322;o o "LGPL-2. lub nowsz&#261;".
 </p><p><span id="Attributes"></span>
 </p>
@@ -389,15 +387,15 @@ Aby okre&#347;li&#263;, &#380;e nie ma zastosowania &#380;adna licencja <i>(np. 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121181236
+Cached time: 20260121181317
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.302 seconds
-Preprocessor visited node count: 476/1000000
-Post&#8208;expand include size: 7872/2097152 bytes
-Template argument size: 2907/2097152 bytes
+CPU time usage: 0.065 seconds
+Real time usage: 0.174 seconds
+Preprocessor visited node count: 481/1000000
+Post&#8208;expand include size: 7875/2097152 bytes
+Template argument size: 2897/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -405,17 +403,17 @@ Unstrip post&#8208;expand size: 8520/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.525      1 -total
- 22.42%   12.899      1 Template:Powerdocnavi/pl
- 19.77%   11.374     37 Template:Incode
- 15.35%    8.831      3 Template:Version/pl
- 13.40%    7.706      1 Template:TOCright
-  6.58%    3.784      1 Template:Code
-  6.05%    3.479      1 Template:MenuCommand
-  4.54%    2.614      1 Template:Navigation_menu_2
+100.00%   37.865      1 -total
+ 29.76%   11.270      1 Template:Powerdocnavi/pl
+ 15.04%    5.695      1 Template:Code
+ 12.32%    4.664      1 Template:MenuCommand
+ 11.69%    4.427     38 Template:Incode
+ 10.64%    4.029      3 Template:Version/pl
+  9.64%    3.650      1 Template:Navigation_menu_2
+  7.62%    2.885      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260121181235 and revision id 1742003. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260121181316 and revision id 1742005. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
