--- a/wiki/pl/Package_Metadata.html
+++ b/wiki/pl/Package_Metadata.html
@@ -3,7 +3,7 @@
 <li><a href="../Package_Metadata.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Package Metadata (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--high" title="M&eacute;tadonn&eacute;es du package (87% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="Pacchetto Metadata (17% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../ru/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="&#1052;&#1077;&#1090;&#1072;&#1076;&#1072;&#1085;&#1085;&#1099;&#1077; &#1076;&#1083;&#1103; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1103; &#1055;&#1072;&#1082;&#1077;&#1090;&#1086;&#1074; &#1076;&#1086;&#1087;&#1086;&#1083;&#1085;&#1077;&#1085;&#1080;&#1081; (36% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <p><span id="Introduction"></span>
@@ -107,9 +107,7 @@ Aby okre&#347;li&#263;, &#380;e nie ma zastosowania &#380;adna licencja <i>(np. 
 </p><p><span id="Attributes"></span>
 </p>
 <h4><span class="mw-headline" id="Atrybuty_3">Atrybuty</span></h4>
-<div class="mw-translate-fuzzy">
-<ul><li><code>file="FILE"</code> <i>(opcjonalnie)</i>: &#346;cie&#380;ka do pliku <code>package.xml</code> zawieraj&#261;cego pe&#322;ny tekst licencji. Wiele licencji wymaga do&#322;&#261;czenia tekstu licencji podczas redystrybucji oprogramowania. Np. Licencja Apache, wersja 2.0 stwierdza w paragrafie 4.1: "Musisz przekaza&#263; ka&#380;demu innemu odbiorcy Utworu lub Utwor&oacute;w Pochodnych kopi&#281; niniejszej Licencji".</li></ul>
-</div>
+<ul><li>file="FILE" <i>(opcjonalnie)</i>: &#346;cie&#380;ka do pliku <code>package.xml</code> zawieraj&#261;cego pe&#322;ny tekst licencji. Wiele licencji wymaga do&#322;&#261;czenia tekstu licencji podczas redystrybucji oprogramowania. Np. Licencja Apache, wersja 2.0 stwierdza w paragrafie 4.1: "Musisz przekaza&#263; ka&#380;demu innemu odbiorcy Utworu lub Utwor&oacute;w Pochodnych kopi&#281; niniejszej Licencji".</li></ul>
 <h3><span id=".3Ccontent.3E"></span><span class="mw-headline" id="&lt;content&gt;">&lt;content&gt;</span></h3>
 <p>WYMAGANE
 </p><p>Znacznik &lt;content&gt; opisuje rzeczywist&#261; zawarto&#347;&#263; pakietu. Nie posiada atrybut&oacute;w i zawiera dowoln&#261; liczb&#281; element&oacute;w podrz&#281;dnych. Te elementy podrz&#281;dne mog&#261; mie&#263; dowolne nazwy znacznik&oacute;w, z kt&oacute;rych tylko niekt&oacute;re mog&#261; by&#263; rozpoznawane przez FreeCAD. FreeCAD obs&#322;uguje obecnie elementy "workbench", "macro", "preferencepack", "bundle" (<span style="font-size:small;"><a href="../pl/Release_notes_1.1.html" title="Release notes 1.1/pl">dost&#281;pne w wersji 1.1</a></span>) i "other" (<span style="font-size:small;"><a href="../pl/Release_notes_1.1.html" title="Release notes 1.1/pl">dost&#281;pne w wersji 1.1</a></span>). Ka&#380;dy element potomny jest nast&#281;pnie definiowany rekurencyjnie przez ten standard, zawieraj&#261;cy dowolne lub wszystkie elementy dozwolone dla w&#281;z&#322;a g&#322;&oacute;wnego &lt;package&gt;. Na przyk&#322;ad:
@@ -387,33 +385,33 @@ Aby okre&#347;li&#263;, &#380;e nie ma zastosowania &#380;adna licencja <i>(np. 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121181317
+Cached time: 20260121181328
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.065 seconds
-Real time usage: 0.174 seconds
-Preprocessor visited node count: 481/1000000
-Post&#8208;expand include size: 7875/2097152 bytes
-Template argument size: 2897/2097152 bytes
+CPU time usage: 0.062 seconds
+Real time usage: 0.099 seconds
+Preprocessor visited node count: 471/1000000
+Post&#8208;expand include size: 7818/2097152 bytes
+Template argument size: 2853/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 8520/5000000 bytes
+Unstrip post&#8208;expand size: 8523/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.865      1 -total
- 29.76%   11.270      1 Template:Powerdocnavi/pl
- 15.04%    5.695      1 Template:Code
- 12.32%    4.664      1 Template:MenuCommand
- 11.69%    4.427     38 Template:Incode
- 10.64%    4.029      3 Template:Version/pl
-  9.64%    3.650      1 Template:Navigation_menu_2
-  7.62%    2.885      1 Template:TOCright
+100.00%   30.237      1 -total
+ 26.62%    8.050      1 Template:Powerdocnavi/pl
+ 18.79%    5.681      1 Template:MenuCommand
+ 16.30%    4.930     37 Template:Incode
+ 13.54%    4.094      3 Template:Version/pl
+  9.03%    2.729      1 Template:Navigation_menu_2
+  6.29%    1.901      1 Template:Code
+  5.06%    1.529      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260121181316 and revision id 1742005. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260121181327 and revision id 1742007. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
