--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -117,12 +117,8 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 </p>
 <h2><span id="U.C5.BCycie"></span><span class="mw-headline" id="U&#380;ycie">U&#380;ycie</span></h2>
 <p>Uruchom folder makr <b>FcString</b> dla utworzonych znak&oacute;w oraz plik <b>FcClock</b> dla utworzonych zegar&oacute;w.
-</p>
-<div class="mw-translate-fuzzy">
-<p>Wszystkie znaki s&#261; i pozostaj&#261; niezale&#380;ne. Podczas tworzenia wyci&#261;gni&#281;&#263; nic nie jest usuwane. Je&#347;li tworzony jest obiekt z&#322;o&#380;ony za pomoc&#261; <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Run Comp</span>, jest on kopiowany poza folder.
-</p>
-</div>
-<p>Opcje s&#261; domy&#347;lnie wyszarzone i aktywne we wszystkich funkcjach, je&#347;li s&#261; zaznaczone jako <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> PRAWDA<span></span></span>:
+</p><p>Wszystkie znaki s&#261; i pozostaj&#261; niezale&#380;ne. Podczas tworzenia wyci&#261;gni&#281;&#263; nic nie jest usuwane. Je&#347;li tworzony jest obiekt z&#322;o&#380;ony za pomoc&#261; <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Run Comp</span>, jest on kopiowany poza folder.
+</p><p>Opcje s&#261; domy&#347;lnie wyszarzone i aktywne we wszystkich funkcjach, je&#347;li s&#261; zaznaczone jako <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> PRAWDA<span></span></span>:
 </p>
 <ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Wyci&#261;gni&#281;cie znak&oacute;w<span></span></span></li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ustawienie pozycji<span></span></span></li>
@@ -155,9 +151,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 <ul><li>Domy&#347;lnie: ARIAL.TTF</li></ul></li></ul>
 <p><span id="Available_options"></span>
 </p>
-<div class="mw-translate-fuzzy">
 <h4><span id="Dost.C4.99pne_opcje"></span><span class="mw-headline" id="Dost&#281;pne_opcje">Dost&#281;pne opcje</span></h4>
-</div>
 <p>Po pierwszym u&#380;yciu nale&#380;y zmodyfikowa&#263; nast&#281;puj&#261;ce parametry: 
 </p><p><b>User parameter:BaseApp/Preferences/Macros/FCMmacros/FCCircularText</b>
 </p><p><b>switchModeTextList</b>
@@ -1001,13 +995,13 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121155804
+Cached time: 20260121181350
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.432 seconds
-Real time usage: 0.576 seconds
-Preprocessor visited node count: 1538/1000000
+CPU time usage: 0.510 seconds
+Real time usage: 2.366 seconds
+Preprocessor visited node count: 1536/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
@@ -1017,19 +1011,19 @@ Unstrip post&#8208;expand size: 66939/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  370.197      1 -total
-  2.07%    7.675      1 Template:Draft_Tools_navi/pl
-  1.71%    6.323     10 Template:Code
-  1.42%    5.262      7 Template:RadioButton
-  1.27%    4.704      1 Template:Macro/pl
-  1.22%    4.520      6 Template:SpinBox
-  0.96%    3.539     10 Template:CheckBox
-  0.84%    3.099      2 Template:Navigation_menu_2
-  0.82%    3.026      1 Template:Userdocnavi/pl
-  0.78%    2.897      3 Template:ColoredText
+100.00% 1350.276      1 -total
+  1.54%   20.762     10 Template:Code
+  1.30%   17.522      6 Template:SpinBox
+  1.18%   15.931     14 Template:Incode
+  0.94%   12.664     10 Template:CheckBox
+  0.84%   11.404      1 Template:Draft_Tools_navi/pl
+  0.76%   10.289      3 Template:ColoredText
+  0.71%    9.623     18 Template:FALSE
+  0.64%    8.662     22 Template:Button
+  0.58%    7.823     14 Template:TRUE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121155803 and revision id 1741897. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181350 and revision id 1742011. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
