Updated page Macro FCCircularText/pl

--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -158,12 +158,10 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 </p>
 <ul><li>0 = tryb tekstu normalnego (i czarnego); wy&#322;&#261;cza prze&#322;&#261;cznik switchFontComBox</li>
 <li>1 = umo&#380;liwia u&#380;ycie switchFontComBox 1</li></ul>
-<div class="mw-translate-fuzzy">
 <p><b>switchFontComBox</b>
 </p>
 <ul><li>0 = (przy switchModeTextList = 1) tryb tekstu (w kolorze) w li&#347;cie ComboBox, szybszy</li>
 <li>1 = (przy switchModeTextList = 1) fontFamily, wolniejszy, ale &#322;adniejszy wygl&#261;d ComboBox!</li></ul>
-</div>
 <div class="mw-translate-fuzzy">
 <p><b>setSystemFonts</b>
 </p>
@@ -995,13 +993,13 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121181350
+Cached time: 20260121181355
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.510 seconds
-Real time usage: 2.366 seconds
-Preprocessor visited node count: 1536/1000000
+CPU time usage: 0.378 seconds
+Real time usage: 0.820 seconds
+Preprocessor visited node count: 1535/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
@@ -1011,19 +1009,19 @@ Unstrip post&#8208;expand size: 66939/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00% 1350.276      1 -total
-  1.54%   20.762     10 Template:Code
-  1.30%   17.522      6 Template:SpinBox
-  1.18%   15.931     14 Template:Incode
-  0.94%   12.664     10 Template:CheckBox
-  0.84%   11.404      1 Template:Draft_Tools_navi/pl
-  0.76%   10.289      3 Template:ColoredText
-  0.71%    9.623     18 Template:FALSE
-  0.64%    8.662     22 Template:Button
-  0.58%    7.823     14 Template:TRUE
+100.00%  487.268      1 -total
+  2.18%   10.636     10 Template:Code
+  1.31%    6.406      1 Template:Userdocnavi/pl
+  1.24%    6.054     14 Template:TRUE
+  1.20%    5.840      1 Template:Draft_Tools_navi/pl
+  0.86%    4.201     19 Template:Clear
+  0.68%    3.327      2 Template:Navigation_menu_2
+  0.62%    3.012      3 Template:ColoredText
+  0.58%    2.829      1 Template:Emphasis
+  0.58%    2.821      6 Template:SpinBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181350 and revision id 1742011. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181355 and revision id 1742013. Rendering was triggered because: unknown
  -->
 </div>
 </div><script src="../site.js"></script>
