--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -275,11 +275,9 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 <p><span id="Second_area"></span>
 </p>
 <h4><span class="mw-headline" id="Drugi_obszar">Drugi obszar</span></h4>
-<div class="mw-translate-fuzzy">
 <p>Ta sekcja pozwala skonfigurowa&#263; og&oacute;lne zachowanie znak&oacute;w we wszystkich dost&#281;pnych opcjach, cho&#263; z pewnymi r&oacute;&#380;nicami.
 Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone.
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_10.png&amp;filetimestamp=20200601153053&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_10.png" decoding="async" width="490" height="261" class="mw-file-element" data-file-width="490" data-file-height="261"></a><figcaption></figcaption></figure>
 <ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">10.0 mm  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Promie&#324; ko&#322;a</b>&nbsp;: Promie&#324; ko&#322;a. (Domy&#347;lnie 10)</li>
@@ -989,13 +987,13 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121181424
+Cached time: 20260121181448
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.504 seconds
-Real time usage: 1.466 seconds
-Preprocessor visited node count: 1533/1000000
+CPU time usage: 0.471 seconds
+Real time usage: 1.607 seconds
+Preprocessor visited node count: 1532/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
@@ -1005,19 +1003,19 @@ Unstrip post&#8208;expand size: 66939/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  889.319      1 -total
-  1.97%   17.517      1 Template:Draft_Tools_navi/pl
-  1.84%   16.336     10 Template:Code
-  1.74%   15.441     18 Template:FALSE
-  1.41%   12.545     14 Template:TRUE
-  1.32%   11.724     19 Template:Clear
-  1.21%   10.733      1 Template:Macro/pl
-  0.93%    8.253     22 Template:Button
-  0.91%    8.111      2 Template:Navigation_menu_2
-  0.88%    7.800      1 Template:Caption
+100.00% 1034.809      1 -total
+  2.49%   25.795      1 Template:Draft_Tools_navi/pl
+  1.91%   19.799     10 Template:Code
+  1.61%   16.619      2 Template:Navigation_menu_2
+  1.02%   10.604      1 Template:Userdocnavi/pl
+  1.02%   10.544     22 Template:Button
+  0.88%    9.126      3 Template:ColoredText
+  0.72%    7.427      1 Template:Macro/pl
+  0.68%    7.077      7 Template:RadioButton
+  0.67%    6.894      1 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181422 and revision id 1742017. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181446 and revision id 1742019. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
