Updated page Macro FCCircularText/pl

--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -278,7 +278,6 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 <p>Ta sekcja pozwala skonfigurowa&#263; og&oacute;lne zachowanie znak&oacute;w we wszystkich dost&#281;pnych opcjach, cho&#263; z pewnymi r&oacute;&#380;nicami.
 Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone.
 </p>
-<div class="mw-translate-fuzzy">
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_10.png&amp;filetimestamp=20200601153053&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_10.png" decoding="async" width="490" height="261" class="mw-file-element" data-file-width="490" data-file-height="261"></a><figcaption></figcaption></figure>
 <ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">10.0 mm  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Promie&#324; ko&#322;a</b>&nbsp;: Promie&#324; ko&#322;a. (Domy&#347;lnie 10)</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">2.0 mm  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Rozmiar znaku</b>&nbsp;: Wysoko&#347;&#263; znaku. (Domy&#347;lnie 2)</li>
@@ -287,11 +286,10 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">10.0 deg  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>K&#261;t korekcyjny</b>&nbsp;: K&#261;t korekcji znaku, aby by&#322; styczny do ko&#322;a. (Domy&#347;lnie 10&deg;)</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0.15 mm  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Korekcja promienia</b>&nbsp;: Ustalony promie&#324; ko&#322;a znak&oacute;w (opcjonalne). (Domy&#347;lnie 0,15)</li>
 <li class="mw-empty-elt">
-<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Wyci&#261;gnij znaki</b><span></span></span>&nbsp;: Zaznaczenie wyci&#261;gni&#281;cia znak&oacute;w. (Domy&#347;lnie nieaktywne)</li>
-<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Ustawienie pozycji</b><span></span></span>&nbsp;: Ustawienie tekstu w widoku 3D. (Domy&#347;lnie nieaktywne)</li>
-<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Pochylenie znak&oacute;w</b><span></span></span>&nbsp;: Pochylenie znak&oacute;w wok&oacute;&#322; osi X, Y i Z (np. do pokrycia sto&#380;ka). (Domy&#347;lnie nieaktywne)</li></ul>
+<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Wyci&#261;gnij znaki</b><span></span></span>&nbsp;: Zaznaczenie wyci&#261;gni&#281;cia znak&oacute;w. (Domy&#347;lne, Nieaktywne)</li>
+<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Ustawienie pozycji</b><span></span></span>&nbsp;: Ustawienie tekstu w widoku 3D. (Domy&#347;lne, Nieaktywne)</li>
+<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Pochylenie znak&oacute;w</b><span></span></span>&nbsp;: Pochylenie znak&oacute;w wok&oacute;&#322; osi X, Y i Z (np. do pokrycia sto&#380;ka). (Domy&#347;lne, Nieaktywne)</li></ul>
 <div style="clear:both"></div>
-</div>
 <p><span id="Outdoor"></span>
 </p>
 <h5><span id="Na_zewn.C4.85trz"></span><span class="mw-headline" id="Na_zewn&#261;trz">Na zewn&#261;trz</span></h5>
@@ -987,13 +985,13 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121181448
+Cached time: 20260121181544
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.471 seconds
-Real time usage: 1.607 seconds
-Preprocessor visited node count: 1532/1000000
+CPU time usage: 0.439 seconds
+Real time usage: 1.373 seconds
+Preprocessor visited node count: 1531/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
@@ -1003,19 +1001,19 @@ Unstrip post&#8208;expand size: 66939/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00% 1034.809      1 -total
-  2.49%   25.795      1 Template:Draft_Tools_navi/pl
-  1.91%   19.799     10 Template:Code
-  1.61%   16.619      2 Template:Navigation_menu_2
-  1.02%   10.604      1 Template:Userdocnavi/pl
-  1.02%   10.544     22 Template:Button
-  0.88%    9.126      3 Template:ColoredText
-  0.72%    7.427      1 Template:Macro/pl
-  0.68%    7.077      7 Template:RadioButton
-  0.67%    6.894      1 Template:Emphasis
+100.00%  934.358      1 -total
+  1.74%   16.262      1 Template:Macro/pl
+  1.49%   13.928     14 Template:Incode
+  1.41%   13.208     10 Template:Code
+  1.19%   11.149     18 Template:FALSE
+  1.07%    9.998      1 Template:Caption
+  1.05%    9.819     22 Template:Button
+  1.05%    9.790      7 Template:RadioButton
+  0.97%    9.108      1 Template:MenuCommand
+  0.93%    8.663     10 Template:CheckBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181446 and revision id 1742019. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181542 and revision id 1742021. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
