Updated page Macro FCCircularText/pl

--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -353,8 +353,7 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 		</li>
 </ul>
 </center>
-<div class="mw-translate-fuzzy">
-<ul><li>Obszar helisy jest domy&#347;lnie ukryty. Okno staje si&#281; widoczne, gdy zaznaczony jest przycisk <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> PRAWDA<span></span></span></li></ul>
+<ul><li>Obszar helisy jest domy&#347;lnie ukryty. Okno staje si&#281; widoczne, gdy zaznaczony jest przycisk <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> PRAWDA<span></span></span>.</li></ul>
 <div style="clear:both"></div>
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_14.png&amp;filetimestamp=20200601143334&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_14.png" decoding="async" width="495" height="415" class="mw-file-element" data-file-width="495" data-file-height="415"></a><figcaption></figcaption></figure>
 <ul><li>Wszystkie opcje konfiguracji znak&oacute;w s&#261; dost&#281;pne.</li>
@@ -365,7 +364,6 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 <ul><li>Je&#347;li <b>Krok helisy</b> (skok helisy) wynosi zero, aktywowane s&#261; pola Spinbox <b>Podstawa helisy</b> oraz <b>Koniec helisy</b>.</li>
 <li><b>Podstawa helisy</b> okre&#347;la punkt startowy helisy (w tym pozycj&#281; Z). Je&#347;li warto&#347;&#263; <i>Umiejscowienie Z</i> jest r&oacute;&#380;na od zera, jest ona dodawana do warto&#347;ci podstawy.</li>
 <li><b>Koniec helisy</b> oznacza koniec skoku helisy; jego warto&#347;&#263; jest obliczana na podstawie wysoko&#347;ci oraz liczby znak&oacute;w na obr&oacute;t helisy.</li></ul>
-</div>
 <p><span id="Clock"></span>
 </p>
 <h5><span class="mw-headline" id="Zegar">Zegar</span></h5>
@@ -985,13 +983,13 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121181544
+Cached time: 20260121181608
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.439 seconds
-Real time usage: 1.373 seconds
-Preprocessor visited node count: 1531/1000000
+CPU time usage: 0.433 seconds
+Real time usage: 0.594 seconds
+Preprocessor visited node count: 1530/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
@@ -1001,19 +999,19 @@ Unstrip post&#8208;expand size: 66939/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  934.358      1 -total
-  1.74%   16.262      1 Template:Macro/pl
-  1.49%   13.928     14 Template:Incode
-  1.41%   13.208     10 Template:Code
-  1.19%   11.149     18 Template:FALSE
-  1.07%    9.998      1 Template:Caption
-  1.05%    9.819     22 Template:Button
-  1.05%    9.790      7 Template:RadioButton
-  0.97%    9.108      1 Template:MenuCommand
-  0.93%    8.663     10 Template:CheckBox
+100.00%  317.844      1 -total
+  3.21%   10.208      1 Template:Draft_Tools_navi/pl
+  2.61%    8.290      6 Template:SpinBox
+  1.94%    6.176      2 Template:Navigation_menu_2
+  1.80%    5.730      1 Template:Macro/pl
+  1.52%    4.844      1 Template:Userdocnavi/pl
+  1.38%    4.401      3 Template:ColoredText
+  1.37%    4.344     10 Template:Code
+  1.19%    3.775     14 Template:Incode
+  1.08%    3.444      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181542 and revision id 1742021. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181607 and revision id 1742023. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
