Updated page Macro FCCircularText/pl

--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -441,10 +441,8 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 <p><span id="Parameters_available"></span>
 </p>
 <h3><span id="Dost.C4.99pne_parametry"></span><span class="mw-headline" id="Dost&#281;pne_parametry">Dost&#281;pne parametry</span></h3>
-<div class="mw-translate-fuzzy">
 <p>Niekt&oacute;re parametry s&#261; dost&#281;pne w ustawieniach FreeCAD, zobacz: <b>Menu &rarr; Narz&#281;dzia &rarr; Edytuj parametry</b>
 </p>
-</div>
 <ul><li>Parametr u&#380;ytkownika: BaseApp/Preferences/Macros/FCMmacros/FCCircularText</li></ul>
 <div class="mw-translate-fuzzy">
 <ul><li><ul><li><code>switchModeTextList</code>&nbsp;:
@@ -971,13 +969,13 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121181837
+Cached time: 20260121181845
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.434 seconds
-Real time usage: 0.709 seconds
-Preprocessor visited node count: 1525/1000000
+CPU time usage: 0.418 seconds
+Real time usage: 0.648 seconds
+Preprocessor visited node count: 1524/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
@@ -987,19 +985,19 @@ Unstrip post&#8208;expand size: 66939/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  370.343      1 -total
-  2.27%    8.409      1 Template:Macro/pl
-  1.80%    6.679      1 Template:Codeextralink
-  1.72%    6.388      1 Template:Draft_Tools_navi/pl
-  1.68%    6.237      1 Template:Caption
-  1.67%    6.187     10 Template:Code
-  1.67%    6.182     10 Template:CheckBox
-  1.66%    6.162      6 Template:SpinBox
-  1.44%    5.330      7 Template:RadioButton
-  1.20%    4.452     18 Template:FALSE
+100.00%  433.410      1 -total
+  2.57%   11.132      1 Template:Draft_Tools_navi/pl
+  1.75%    7.571      1 Template:Macro/pl
+  1.60%    6.928     10 Template:CheckBox
+  1.55%    6.711     14 Template:TRUE
+  1.40%    6.064     18 Template:FALSE
+  1.34%    5.806      6 Template:SpinBox
+  1.31%    5.695      7 Template:RadioButton
+  1.11%    4.815      1 Template:Codeextralink
+  1.11%    4.800     19 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181836 and revision id 1742033. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181844 and revision id 1742035. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
