Updated page Macro FCCircularText/pl

--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -683,8 +683,8 @@ Tryb reliefu:
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_55.png&amp;filetimestamp=20160704123324&amp;.html" class="mw-file-description" title="Wybierz prostok&#261;t i elips&#281;, a nast&#281;pnie utw&oacute;rz compound."><img alt="Wybierz prostok&#261;t i elips&#281;, a nast&#281;pnie utw&oacute;rz compound." src="../File/FCCircularText_55.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
-			<div class="gallerytext">Wybierz prostok&#261;t i elips&#281;, a nast&#281;pnie utw&oacute;rz compound.</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_55.png&amp;filetimestamp=20160704123324&amp;.html" class="mw-file-description" title="Wybierz prostok&#261;t i elips&#281;, a nast&#281;pnie utw&oacute;rz kszta&#322;t z&#322;o&#380;ony."><img alt="Wybierz prostok&#261;t i elips&#281;, a nast&#281;pnie utw&oacute;rz kszta&#322;t z&#322;o&#380;ony." src="../File/FCCircularText_55.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
+			<div class="gallerytext">Wybierz prostok&#261;t i elips&#281;, a nast&#281;pnie utw&oacute;rz kszta&#322;t z&#322;o&#380;ony.</div>
 		</li>
 		<li class="gallerybox" style="width: 335px">
 			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_56.png&amp;filetimestamp=20160704123400&amp;.html" class="mw-file-description" title="Wyci&#261;gnij compound jako cia&#322;o sta&#322;e."><img alt="Wyci&#261;gnij compound jako cia&#322;o sta&#322;e." src="../File/FCCircularText_56.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
@@ -964,35 +964,35 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121181940
+Cached time: 20260121181953
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.397 seconds
-Real time usage: 0.693 seconds
+CPU time usage: 0.466 seconds
+Real time usage: 0.623 seconds
 Preprocessor visited node count: 1522/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66981/5000000 bytes
+Unstrip post&#8208;expand size: 67011/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  361.847      1 -total
-  4.52%   16.346      1 Template:Draft_Tools_navi/pl
-  3.29%   11.914      2 Template:Navigation_menu_2
-  1.76%    6.356      1 Template:Userdocnavi/pl
-  1.74%    6.286     10 Template:Code
-  1.39%    5.022      1 Template:Macro/pl
-  1.18%    4.259     10 Template:CheckBox
-  1.13%    4.074      7 Template:RadioButton
-  0.99%    3.567      1 Template:Codeextralink
-  0.85%    3.092     22 Template:Button
+100.00%  393.031      1 -total
+  2.14%    8.396      1 Template:Macro/pl
+  1.82%    7.146     10 Template:CheckBox
+  1.26%    4.964      3 Template:ColoredText
+  1.24%    4.872     18 Template:FALSE
+  1.22%    4.783      7 Template:RadioButton
+  1.08%    4.243     10 Template:Code
+  1.06%    4.163     22 Template:Button
+  1.04%    4.096      1 Template:Draft_Tools_navi/pl
+  0.96%    3.767      6 Template:SpinBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181939 and revision id 1742043. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181952 and revision id 1742045. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
