Updated page Macro FCCircularText/pl

--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -697,8 +697,8 @@ Tryb reliefu:
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_57.png&amp;filetimestamp=20160704123428&amp;.html" class="mw-file-description" title="Wybierz obiekt (tekst), compound i wykonaj operacj&#281; ci&#281;cia (Cut)."><img alt="Wybierz obiekt (tekst), compound i wykonaj operacj&#281; ci&#281;cia (Cut)." src="../File/FCCircularText_57.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
-			<div class="gallerytext">Wybierz obiekt (tekst), compound i wykonaj operacj&#281; ci&#281;cia (Cut).</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_57.png&amp;filetimestamp=20160704123428&amp;.html" class="mw-file-description" title="Wybierz obiekt (tekst), kszta&#322;t z&#322;o&#380;ony i wykonaj operacj&#281; ci&#281;cia (Cut)."><img alt="Wybierz obiekt (tekst), kszta&#322;t z&#322;o&#380;ony i wykonaj operacj&#281; ci&#281;cia (Cut)." src="../File/FCCircularText_57.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
+			<div class="gallerytext">Wybierz obiekt (tekst), kszta&#322;t z&#322;o&#380;ony i wykonaj operacj&#281; ci&#281;cia (Cut).</div>
 		</li>
 		<li class="gallerybox" style="width: 335px">
 			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_58.png&amp;filetimestamp=20160704123458&amp;.html" class="mw-file-description" title="Tekst jest wyci&#281;ty w kszta&#322;cie elipsy."><img alt="Tekst jest wyci&#281;ty w kszta&#322;cie elipsy." src="../File/FCCircularText_58.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
@@ -964,35 +964,35 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121181953
+Cached time: 20260121182006
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.466 seconds
-Real time usage: 0.623 seconds
+CPU time usage: 0.527 seconds
+Real time usage: 2.551 seconds
 Preprocessor visited node count: 1522/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 67011/5000000 bytes
+Unstrip post&#8208;expand size: 67041/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  393.031      1 -total
-  2.14%    8.396      1 Template:Macro/pl
-  1.82%    7.146     10 Template:CheckBox
-  1.26%    4.964      3 Template:ColoredText
-  1.24%    4.872     18 Template:FALSE
-  1.22%    4.783      7 Template:RadioButton
-  1.08%    4.243     10 Template:Code
-  1.06%    4.163     22 Template:Button
-  1.04%    4.096      1 Template:Draft_Tools_navi/pl
-  0.96%    3.767      6 Template:SpinBox
+100.00% 1834.072      1 -total
+  1.98%   36.345     10 Template:Code
+  1.92%   35.238      1 Template:Draft_Tools_navi/pl
+  1.37%   25.157      7 Template:RadioButton
+  1.27%   23.234      1 Template:Emphasis
+  1.19%   21.890     10 Template:CheckBox
+  1.00%   18.375      2 Template:Navigation_menu_2
+  0.97%   17.874      6 Template:SpinBox
+  0.88%   16.058      1 Template:Macro/pl
+  0.69%   12.712     22 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181952 and revision id 1742045. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121182003 and revision id 1742047. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
